--- a/nx-oxfmt/package.json
+++ b/nx-oxfmt/package.json
@@ -4,6 +4,8 @@
   "main": "./src/index.js",
   "types": "./src/index.d.ts",
   "dependencies": {
+    "@nx/devkit": "22.4.4",
+    "oxfmt": "^0.28.0",
     "tslib": "^2.3.0"
   },
   "keywords": [
