--- a/project.json
+++ b/project.json
@@ -1,6 +1,7 @@
 {
     "name": "@nx-oxfmt/source",
     "$schema": "node_modules/nx/schemas/project-schema.json",
+    "includedScripts": [],
     "targets": {
         "local-registry": {
             "executor": "@nx/js:verdaccio",
