--- a/nx-oxfmt/package.json
+++ b/nx-oxfmt/package.json
@@ -20,5 +20,6 @@
     },
     "author": "0zd0",
     "license": "MIT",
-    "generators": "./generators.json"
+    "generators": "./generators.json",
+    "executors": "./executors.json"
 }
