--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,14 +25,14 @@ jobs:
         with:
           run_install: true
 
-      - name: Build
-        run: pnpm run build
-
-      - name: Lint
-        run: pnpm run lint
-
-      - name: Test
-        run: pnpm run test
+#      - name: Build
+#        run: pnpm run build
+#
+#      - name: Lint
+#        run: pnpm run lint
+#
+#      - name: Test
+#        run: pnpm run test
 
       - name: Test E2E
         run: pnpm run e2e
