--- a/nx.json
+++ b/nx.json
@@ -45,7 +45,20 @@
     },
     "release": {
         "version": {
-            "preVersionCommand": "npx nx run-many -t build"
+            "conventionalCommits": true,
+            "preVersionCommand": "nx run-many -t build",
+            "manifestRootsToUpdate": ["{projectRoot}"]
+        },
+        "changelog": {
+            "workspaceChangelog": {
+                "file": false,
+                "createRelease": "github"
+            }
+        },
+        "git": {
+            "commit": true,
+            "tag": true,
+            "push": true
         }
     }
 }
