--- a/packages/nx-oxfmt-e2e/project.json
+++ b/packages/nx-oxfmt-e2e/project.json
@@ -1,15 +1,15 @@
 {
     "name": "nx-oxfmt-e2e",
-    "$schema": "../node_modules/nx/schemas/project-schema.json",
+    "$schema": "../../node_modules/nx/schemas/project-schema.json",
     "projectType": "application",
-    "sourceRoot": "nx-oxfmt-e2e/src",
+    "sourceRoot": "packages/nx-oxfmt-e2e/src",
     "implicitDependencies": ["nx-oxfmt"],
     "targets": {
         "e2e": {
             "executor": "@nx/jest:jest",
             "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
             "options": {
-                "jestConfig": "nx-oxfmt-e2e/jest.config.cts",
+                "jestConfig": "packages/nx-oxfmt-e2e/jest.config.cts",
                 "runInBand": true
             },
             "dependsOn": ["^build"]
