--- a/packages/nx-oxfmt/package.json
+++ b/packages/nx-oxfmt/package.json
@@ -5,8 +5,7 @@
     "types": "./src/index.d.ts",
     "dependencies": {
         "@nx/devkit": "22.4.4",
-        "oxfmt": "^0.28.0",
-        "tslib": "^2.3.0"
+        "oxfmt": "^0.28.0"
     },
     "keywords": [
         "nx",
