--- a/packages/nx-oxfmt/project.json
+++ b/packages/nx-oxfmt/project.json
@@ -1,7 +1,7 @@
 {
     "name": "nx-oxfmt",
-    "$schema": "../node_modules/nx/schemas/project-schema.json",
-    "sourceRoot": "nx-oxfmt/src",
+    "$schema": "../../node_modules/nx/schemas/project-schema.json",
+    "sourceRoot": "packages/nx-oxfmt/src",
     "projectType": "library",
     "release": {
         "version": {
@@ -16,28 +16,28 @@
             "executor": "@nx/js:tsc",
             "outputs": ["{options.outputPath}"],
             "options": {
-                "outputPath": "dist/nx-oxfmt",
-                "main": "nx-oxfmt/src/index.ts",
-                "tsConfig": "nx-oxfmt/tsconfig.lib.json",
+                "outputPath": "dist/packages/nx-oxfmt",
+                "main": "packages/nx-oxfmt/src/index.ts",
+                "tsConfig": "packages/nx-oxfmt/tsconfig.lib.json",
                 "assets": [
-                    "nx-oxfmt/*.md",
+                    "packages/nx-oxfmt/*.md",
                     {
-                        "input": "./nx-oxfmt/src",
+                        "input": "./packages/nx-oxfmt/src",
                         "glob": "**/!(*.ts)",
                         "output": "./src"
                     },
                     {
-                        "input": "./nx-oxfmt/src",
+                        "input": "./packages/nx-oxfmt/src",
                         "glob": "**/*.d.ts",
                         "output": "./src"
                     },
                     {
-                        "input": "./nx-oxfmt",
+                        "input": "./packages/nx-oxfmt",
                         "glob": "generators.json",
                         "output": "."
                     },
                     {
-                        "input": "./nx-oxfmt",
+                        "input": "./packages/nx-oxfmt",
                         "glob": "executors.json",
                         "output": "."
                     }
@@ -56,7 +56,7 @@
             "executor": "@nx/jest:jest",
             "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
             "options": {
-                "jestConfig": "nx-oxfmt/jest.config.cts"
+                "jestConfig": "packages/nx-oxfmt/jest.config.cts"
             }
         }
     }
